# anderson_device

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/anderson_device/: CMakeLists.txt  anderson_device.h  dual_history.cuh  dual_history.h  uv_solver.cuh  uv_solver.h
src/: CMakeLists.txt  anderson_device.cpp  dual_history.cu  uv_solver.cu
test/: CMakeLists.txt  anderson_device_test.cpp
